filebrowser/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: filebrowser-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: "filebrowser-redirect@kubernetescrd, filebrowser-cors@kubernetescrd"
spec:
  tls:
    - secretName: filebrowser-cert
  rules:
    - host: share.sachiniyer.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: filebrowser
                port:
                  number: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: filebrowser
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cors
  namespace: filebrowser
spec:
  headers:
    accessControlAllowMethods:
      - "GET"
      - "OPTIONS"
      - "PUT"
    accessControlAllowHeaders:
      - "*"
    accessControlAllowOriginList:
      - "https://sachiniyer.com"
    accessControlMaxAge: 100
    addVaryHeader: true
